# rust-lean-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  story.yml
.github/workflows/: audit.yml  bench.yml  ci.yml  release.yml
crates/lean-lsp-client/: Cargo.toml
crates/lean-lsp-client/benches/: transport_bench.rs
crates/lean-lsp-client/src/: client.rs  error.rs  jsonrpc.rs  lean_client.rs  lib.rs  multiplexer.rs  pool.rs  transport.rs  types.rs
crates/lean-mcp-core/: Cargo.toml
crates/lean-mcp-core/benches/: core_bench.rs
crates/lean-mcp-core/src/: build_coordinator.rs  cache.rs  config.rs  error.rs  file_utils.rs  goal_diff.rs  instructions.rs  lib.rs  loogle.rs  models.rs  rate_limit.rs  repl.rs  repl_pool.rs  search_utils.rs  task_manager.rs  utils.rs
crates/lean-mcp-server/: Cargo.toml
crates/lean-mcp-server/benches/: server_bench.rs
crates/lean-mcp-server/src/: lib.rs  main.rs  server.rs
crates/lean-mcp-server/src/tools/: batch.rs  batch_goals.rs  build.rs  code_actions.rs  completions.rs  declarations.rs  diagnostics.rs  goal.rs  hover.rs  mod.rs  multi_attempt.rs  outline.rs  profile.rs  project_health.rs  proof_diff.rs  references.rs  run_code.rs  search.rs  symbol_resolve.rs  verify.rs  widgets.rs
crates/lean-mcp-server/tests/e2e/: errors.rs  helpers.rs  integration.rs  main.rs  protocol.rs  shutdown.rs  stress.rs  tools.rs
tests/fixtures/api_responses/: leanfinder_commutativity.json  leansearch_continuous.json  loogle_nat_add_comm.json  ripgrep_declarations.jsonl
tests/fixtures/lean_project/: Test.lean
