[package]
name = "lean-lsp-client"
description = "Async Lean 4 Language Server Protocol client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-types = "0.97"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3"
pretty_assertions = "1"
