[package]
name = "lean-mcp-core"
description = "Core business logic for the Lean LSP MCP server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
wiremock = "0.6"
tempfile = "3"
proptest = "1"
pretty_assertions = "1"
