[package]
name = "lean-mcp-server"
description = "High-performance Lean 4 LSP MCP server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rust-lean-mcp"
path = "src/main.rs"

[dependencies]
lean-lsp-client = { path = "../lean-lsp-client" }
lean-mcp-core = { path = "../lean-mcp-core" }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
async-trait = "0.1"
predicates = "3"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util", "macros"] }
tokio-test = "0.4"
wiremock = "0.6"
